<resources>
    <string name="app_name">Trim-It</string>
    <string name="signup">Sign up</string>
    <string name="login">Log in</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_pwd"><u>Forgotten password</u></string>
    <string name="error_field_empty">Should not be empty</string>
    <string name="accept_terms">By signing up, I agree to TRIM-IT\'S Terms of Service</string>
    <string name="et_first_name">First name</string>
    <string name="et_last_name">Last name</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="et_password_confirm">Confirm password</string>
    <string name="error_passwords_not_match">Passwords don\'t match</string>
    <string name="et_birthday">DD/MM/YYYY</string>
    <string name="et_barber_type">Barbershop</string>
    <string name="et_gender">Gender</string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="error_field_not_valid">Not valid</string>

    <string-array name="gender_array">
        <item>male</item>
        <item>female</item>
        <item>other</item>
    </string-array>
    <string-array name="barber_type_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="client_id">AndroidFreelancerClient</string>
    <string name="client_secret">cGfa2k*GrOMpfkdonfes!jz87f</string>
    <string name="base_url">https://api.trimitapp.co.uk/v1-dev/</string>
    <string name="error_email_in_use">Email is in use</string>
    <string name="error_email_not_exist">Email does not exist</string>
    <string name="error">Error</string>
    <string name="reset_password_success">Reset password link was sent to:  </string>

    <string name="text_signup_name">What\'s your name?</string>
    <string name="text_signup_email">Your email too?</string>
    <string name="text_signup_password">Create a password</string>
    <string name="text_signup_dob">Birthday?</string>
    <string name="text_signup_gender">Gender?</string>
    <string name="text_signup_barber_type">Type of barbershop?</string>
    <string name="label_pwd_reset">Enter yur email to reset your password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_appointment">Appointment</string>
    <string name="title_loyalty">Loyalty</string>

    <string name="title_profile_my_trims">My trims</string>
    <string name="title_profile_my_wallet">My wallet</string>
    <string name="title_profile_tos">Terms of service</string>
    <string name="title_profile_help">Help centre</string>
    <string name="title_profile_signout">Sign out</string>
    <string name="postcode">Current postcode</string>
    <string name="how_can_we_help">How can we help?</string>
    <string name="mapbox_token">pk.eyJ1IjoibXVyYW5vNTAwayIsImEiOiJjaXluaGdpdmkwMDE3NDNxemtzcGM0aHUwIn0.2jC2GBu7ULr_cyt3YMvBlw</string>
    <string name="title_barber">Barber</string>
    <string name="text_babers_found">5 barbers found</string>
    <string name="text_barbers_found">5 barbers found</string>
    <string name="user_location_permission_explanation">Need location permission to find local barbers</string>
    <string name="user_location_permission_not_granted">Location permission not granted</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userdata_loading">User data is loading...</string>
    <string name="book_now">Book now</string>
    <string name="text_reviews">Reviews</string>


</resources>
