<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/item_my_trims"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_gradient" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:elevation="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/welcome_text1"
        app:layout_constraintTop_toTopOf="@+id/bg"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="48dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/label_welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_profile"
        app:civ_border_color="@color/colorBarIconWhite"
        app:civ_border_width="6dp"/>

    <TextView
        android:id="@+id/label_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/item_my_trims"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/item_my_trims"
        style="@style/ProfileMenuItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/title_profile_my_trims"
        app:layout_constraintBottom_toTopOf="@+id/item_my_wallet"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorBarIconDark"
        app:layout_constraintBottom_toTopOf="@+id/item_my_wallet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/item_my_wallet"
        style="@style/ProfileMenuItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/title_profile_my_wallet"
        app:layout_constraintBottom_toTopOf="@+id/item_tos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorBarIconDark"
        app:layout_constraintBottom_toTopOf="@+id/item_tos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@+id/item_tos"
        style="@style/ProfileMenuItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/title_profile_tos"
        app:layout_constraintBottom_toTopOf="@+id/item_help"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorBarIconDark"
        app:layout_constraintBottom_toTopOf="@+id/item_help"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@+id/item_help"
        style="@style/ProfileMenuItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/title_profile_help"
        app:layout_constraintBottom_toTopOf="@+id/item_signout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorBarIconDark"
        app:layout_constraintBottom_toTopOf="@+id/item_signout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@+id/item_signout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_profile_signout"
        style="@style/ProfileMenuItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />


</android.support.constraint.ConstraintLayout>